<resources>
    <string name="app_name">Flink_app</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- BottomNavegation - MENU -->
    <string name="bottom_home">Início</string>
    <string name="bottom_favor">Favorito</string>
    <string name="bottom_list">Lista</string>
    <string name="bottom_car">Carrinho</string>
    <string name="bottom_perf">Perfil</string>

    <!-- BottomNavigation - BOTTOM_HOME - Descrição dos cards -->
    <string name="home_title">Oi, Clarissa!</string>
    <string name="home_sub_title">Para qual mercado você deseja ir?</string>
    <!-- CardView - 01 -->
    <string name="home_card_img">Supermercado 01</string>
    <string name="home_card_title">Mercado</string>
    <string name="home_card_classcifica">Class</string>
    <string name="home_card_distancia">Km distância</string>
    <string name="home_card_status">Aberto até às 21:00</string>
    <string name="home_card_endereco">R. Cap. Rebelinha, 440 - Pina</string>
    <string name="home_card_mapa">Mapa do Mercado</string>

    <!-- Descriptions - ImagemView -->
    <string name="img_qr_code">QR Code</string>
    <string name="img_barra_superior">Barra Superior</string>
    <string name="img_help">Help</string>

    <!-- Activity - LISTA -->
    <string name="lista_title">Vamos fazer uma lista?</string>
    <string name="lista_sub_title">Vamos começar por uma lista de compras para facilitar!</string>
    <string name="lista_descript">Pesquise por o que precisar</string>
    <string name="lista_itens">Itens populares</string>

    <!--Atributos da lista de compras -->
    <string name="lista_icon_add">Icon Add Itens na Lista</string>
    <string name="lista_icon_help">Icon Dúvidas</string>
    <string name="lista_leite">Leite</string>
    <string name="lista_ovos">Ovos</string>
    <string name="lista_pao">Pão</string>
    <string name="lista_papel_h">Papel Higiênico</string>
    <string name="lista_agua">Água</string>
    <string name="lista_tomate">Tomate</string>
    <string name="lista_cerverja">Cerveja</string>
    <string name="lista_cafe">Café</string>
    <string name="lista_arroz">Arroz</string>
    <string name="lista_feijao">Feijão</string>

    <!-- Fragment Feed -->
    <string name="feed_card_title">você está em</string>
    <string name="feed_card_valor">seu total:</string>
    <string name="feed_card_btn_float">Retornar à lista</string>
    <string name="feed_card_scanear_produto">Scanear\nProduto</string>
    <string name="feed_card_rota_mercado">Rota no\nMercado</string>
    <string name="feed_card_descricao_produto">Sorvete de Açaí com Guaraná</string>
    <string name="feed_card_botao_voltar">Retornar \n à lista</string>

    <!-- Fragment Favorito -->
    <string name="favorito_card_title">Minha Lista de Compras</string>
    <string name="favorito_card_sub_title">Verifique abaixo se são esses os itens que você deseja! O próximo passo será irmos às compras!</string>
    <string name="favorito_card_btn_continua_compra">Continuar comprando!</string>

    <!-- Activity Mapa do Mercado -->
    <string name="rota_btn_continua">Concluir compra</string>

</resources>
