<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarStyle="insideInset"
    android:background="@color/SilverWhite"
    tools:ignore="ScrollViewCount">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageButton
            style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            android:id="@+id/btn_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/SilverWhite"
            android:contentDescription="@string/img_help"
            android:src="@drawable/icon_interrogacao_48" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="-4dp"
            android:layout_gravity="center"
            android:contentDescription="@string/img_barra_superior"
            android:src="@drawable/icon_barra_superior" />

        <ImageButton
            android:id="@+id/btn_code"
            style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="@color/SilverWhite"
            android:contentDescription="@string/img_qr_code"
            android:src="@drawable/icons_qr_40" />

    </GridLayout>

    <TextView
        android:id="@+id/title_home_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/home_title"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/Black"
        android:textStyle="bold"/>

    <TextView
        android:paddingLeft="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/home_sub_title"
        android:textColor="@color/Black"
        android:textSize="16sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lista_supermer"
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/SilverWhite"/>

    </ScrollView>

</LinearLayout>