<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/GreyBackground"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_faq"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/icon_interogacao"
        android:backgroundTint="@color/MediumPurple"
        android:clickable="true"
        android:contentDescription="@string/img_help"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/img_barra_superior"
        android:src="@drawable/icon_barra_superior"
        app:layout_constraintEnd_toStartOf="@+id/btn_code"
        app:layout_constraintStart_toEndOf="@+id/btn_faq"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btn_code"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:background="@color/GreyBackground"
        android:clickable="true"
        android:contentDescription="@string/img_qr_code"
        android:gravity="center"
        android:padding="10dp"
        android:src="@drawable/icon_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/favorito_card_title"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/favorito_card_sub_title"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/continuarCompras"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:text="@string/favorito_card_btn_continua_compra"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaCarrinho"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:background="@color/GreyBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continuarCompras" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/Chocolate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>