<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GreyBackground"
    android:elevation="10dp"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context=".Flink_Lista">

    <ImageButton
        android:id="@+id/btn_faq"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/icon_interogacao"
        android:backgroundTint="@color/MediumPurple"
        android:contentDescription="@string/img_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/img_barra_superior"
        android:src="@drawable/icon_barra_superior"
        app:layout_constraintEnd_toStartOf="@+id/btn_code"
        app:layout_constraintStart_toEndOf="@+id/btn_faq"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btn_code"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/icon_qr_code"
        android:contentDescription="@string/img_qr_code"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/lista_title"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/lista_sub_title"
        android:textColor="@color/Black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/lista_descript"
        android:textColor="@color/Black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/lista_itens"
        android:textColor="@color/Silver"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_filtro" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_compras"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/GreyBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmar_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:padding="2dp"
        android:src="@drawable/baseline_check_white_24"
        android:backgroundTint="@color/colorPrimary"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded" />

    <SearchView
        android:id="@+id/lista_filtro"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/White"
        android:baselineAligned="false"
        android:iconifiedByDefault="true"
        android:inputType="text"
        android:queryBackground="@color/White"
        android:queryHint="Pesquise seu item"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/adicionarItem"
            android:layout_width="35dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="-45dp"
            android:padding="2dp"
            app:backgroundTint="@color/MediumPurple"
            app:icon="@android:drawable/ic_input_add"
            tools:ignore="MissingConstraints" />

    </SearchView>

</androidx.constraintlayout.widget.ConstraintLayout>