<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/SilverWhite"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Flink_Rota_Mercado">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageButton
            android:id="@+id/btn_faq"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:background="@drawable/icon_question_32"
            android:backgroundTint="@color/MediumPurple"
            android:contentDescription="@string/img_help" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="-4dp"
            android:layout_gravity="center"
            android:contentDescription="@string/img_barra_superior"
            android:src="@drawable/icon_barra_superior" />

        <ImageButton
            android:id="@+id/btn_code"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="@drawable/icon_qr_code"
            android:contentDescription="@string/img_qr_code"
            android:gravity="center"
            android:padding="10dp" />

    </GridLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/White"
        app:cardElevation="8dp"
        app:contentPadding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="65dp">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="21dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_local"/>

            <LinearLayout
                android:padding="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/feed_card_title"
                    android:textColor="@color/OrangeLight"
                    android:textSize="10sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/nomeMercado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="VerdFruit"
                    android:textColor="@color/BlackGray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/divider2"
                android:layout_width="2dp"
                android:layout_height="46dp"
                android:background="@color/Black"
                android:backgroundTint="@color/Silver"
                tools:layout_editor_absoluteX="251dp"
                tools:layout_editor_absoluteY="2dp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/feed_card_valor"
                    android:textColor="@color/Silver"
                    android:textSize="10sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/totalPagar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="R$ 412,64"
                    android:textColor="@color/MediumPurple"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

        </GridLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="5dp"
        app:contentPadding="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="@color/Silver"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <!-- MAPA DO SUPERMERCADO -->

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        app:backgroundTint="@color/colorPrimary"
        android:padding="15dp"
        app:cornerRadius="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/rota_btn_continua"/>

    <LinearLayout
        android:layout_marginTop="-60dp"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:layout_marginRight="-20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            style="@style/Widget.MaterialComponents.CardView"
            android:id="@+id/scannerProduto"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp"
            app:cardCornerRadius="20dp"
            android:layout_gravity="right"
            app:cardBackgroundColor="@color/MediumPurple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed_card_scanear_produto"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/White"
                android:gravity="center"
                android:textSize="10sp"/>

            <LinearLayout
                android:padding="2dp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="AdapterViewChildren">

                <androidx.appcompat.widget.AppCompatImageView
                    android:backgroundTint="@color/White"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    app:tint="@color/White"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_codigo_barras_32" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </LinearLayout>