<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="8dp"
    android:paddingLeft="8dp"
    android:background="@color/GreyBackground">

    <ImageButton
        android:id="@+id/btn_faq"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/icon_interogacao"
        android:backgroundTint="@color/MediumPurple"
        android:clickable="true"
        android:contentDescription="@string/img_help"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/img_barra_superior"
        android:src="@drawable/icon_barra_superior"
        app:layout_constraintEnd_toStartOf="@+id/btn_code"
        app:layout_constraintStart_toEndOf="@+id/btn_faq"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btn_code"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:background="@color/GreyBackground"
        android:clickable="true"
        android:contentDescription="@string/img_qr_code"
        android:gravity="center"
        android:padding="10dp"
        android:src="@drawable/icon_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="Favoritos Vazio"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>